[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/DebugPanel/DebugPanel.gd" type="Script" id=1]
[ext_resource path="res://Fonts/GothamBold_10_outline.tres" type="DynamicFont" id=3]

[node name="DebugPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1250.0
margin_bottom = 690.0

[node name="FPS" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 1250.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 3 )
uppercase = true

[node name="ObjectsRendered" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 16.0
margin_right = 1250.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 3 )
uppercase = true

[node name="VerticesRendered" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 1250.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
uppercase = true

[node name="DrawCalls" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 1250.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 3 )
uppercase = true

[node name="VideoMemUsed" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 1250.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 3 )
uppercase = true

[node name="Quit" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 1250.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 3 )
text = "Press 'X' to quit"
uppercase = true
